Section header and home slider top 1px gap fixed

--- a/src/main/webapp/assets/css/by-header.css
+++ b/src/main/webapp/assets/css/by-header.css
@@ -40,7 +40,7 @@
 }
 
 .headerHeightNoBreadCrumb {
-	height: 112px;
+	height: 111px;
 }
 
 .header .topbar {
