--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -399,7 +399,7 @@ ul.loginbar.pull-right {
 .homeSlider {
 	width: 100%;
 	height: auto;
-	margin-top: 112px;
+	margin-top: 111px;
 }
 
 .item {
